
    HIVE-1387. Add PERCENTILE_APPROX which works with double data type
    (Mayank Lahiri via jvs)

  IMPROVEMENTS

    HIVE-1394. Do not update transient_lastDdlTime if the partition is modified by a housekeeping
    operation (Ning Zhang via namit)

    HIVE-1430. Dont run serialize plan by default (Ning Zhang via namit)

    HIVE-1443. Add an API to turn off bucketing (Paul Yang via namit)

  OPTIMIZATIONS

  BUG FIXES

    HIVE-1440. Bug in RCFiles with local work (map-join or sort-merge join)
    (He Yongqiang via namit)

Release 0.6.0 -  Unreleased

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HIVE-964. Handle skew join
    (Yongqiang He via namit)

    HIVE-972. Support views. (John Sichi via zshao)

    HIVE-1172. Add UDFS to create struct (Zheng Shao via Ning Zhang)

    HIVE-894. add udaf max_n, min_n to contrib (Zheng Shao via Yongqiang He)

    HIVE-1152. Add metastore API method to drop/append partition by name.
    (Paul Yang via zshao)

    HIVE-1147. Update Eclipse project configuration to match Checkstyle
    (Carl Steinbach via zshao)

    HIVE-1117. Make queryPlan serializable
    (Zheng Shao via namit)

    HIVE-917. Bucketed Map Join
    (He Yongqiang via namit)

    HIVE-1178. enforce bucketing for a table.
    (Namit Jain via He Yongqiang)

    HIVE-1188. NPE when TestJdbcDriver/TestHiveServer
    (Call Steinbach via Ning Zhang)

    HIVE-1032. Better Error Messages for Execution Errors.
    (Paul Yang via zshao)

    HIVE-1193. ensure sorting properties for a table.
    (Namit via He Yongqiang)

    HIVE-259. Add PERCENTILE aggregate function.
    (Jerome Boulon, Zheng via He Yongqiang)

    HIVE-1197. Add BucketizedHiveInputFormat
    (Siying Dong via namit)

    HIVE-1194. Add sort merge join
    (He Yongqiang via namit)

    HIVE-705. Read HBase tables via Hive
    (John Sichi via namit)

    HIVE-1027. Create UDFs for XPath expression evaluation
    (Patrick Angeles via Ning Zhang)
