@@ -508,6 +508,13 @@ name|getMethods
 argument_list|()
 control|)
 block|{
+name|method
+operator|.
+name|setAccessible
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
 name|method
